--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     margin:0 auto;
     margin-top: 20px;
     width: 350px;
-    height: 500px;
+    min-height: 500px;
     background-color: #f1f2f6;
     padding: 20px;
     padding-left: 40px;
